--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ Changelog
 6.0.0 (2014-XX-XX)
 ------------------
 
- * removed Swift_Mime_HeaderFactory, Swift_Mime_HeaderSet, Swift_Mime_Message,
+ * removed Swift_Mime_HeaderFactory, Swift_Mime_HeaderSet, Swift_Mime_Message, Swift_Mime_MimeEntity,
    and Swift_Mime_ParameterizedHeader interfaces
  * removed Swift_Encoding
  * removed the Swift_Transport_MailInvoker interface and Swift_Transport_SimpleMailInvoker class
